# us-political-ad-content-analysis-public

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
analysis/: README.md
docs/: logging.md
scraper/: RUNBOOK.md
scraper/infra/: adsink.iam.json  env.run.yaml.example  lifecycle.json
scraper/infra/schema/: creative_events.schema.json
scraper/scripts/: metrics.py  schema.sql  scrape_image_ads.py  scrape_text_ads.py  scraper_common.py  scraper_db.py
scraper/sql/: 2025-10-26-add-ocr-columns.sql  metrics.sql
scraper/src/gatc_scraper/: __init__.py  debug.py  hashing.py  logging.py  metadata.py  ocr.py  playwright.py  storage.py  urls.py  versioning.py
scraper/src/gatc_scraper/db/: __init__.py  postgres.py
scraper/src/gatc_scraper/image/: __init__.py  pipeline.py
scraper/src/gatc_scraper/text/: __init__.py  pipeline.py
scraper/tests/: test_hashing.py  test_metadata.py  test_storage.py  test_urls.py
